objects/LLC_BI__Deposit__c.object
<CustomObject>
    <description>The Deposit Object is used to track details of a deposit within nCino</description>
    <fields>
        <fullName>Full_Product_Name__c</fullName>
        <description>Combined product, line and type</description>
        <formula>text( LLC_BI__Product__c) &amp; &quot; - &quot; &amp; text(LLC_BI__Product_Line__c) &amp; &quot; - &quot; &amp; text( LLC_BI__Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__APY__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the Annual Percentage Yield.</description>
        <inlineHelpText>Annual Percentage Yield</inlineHelpText>
        <label>APY</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Number__c</fullName>
        <description>This field is required. It is populated manually by the user or automatically depending on the financial institution&apos;s integration. It represents the account number of a deposit account.</description>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_To_Receive_Accrued_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Administrators populate this lookup field with the Account that receives the accrued interest from a time-based Deposit Account.</description>
        <inlineHelpText>Enter the Account that receives the accrued interest.</inlineHelpText>
        <label>Account to Receive Accrued Interest</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Accrued Interest Deposit Accounts</relationshipLabel>
        <relationshipName>Accrued_Interest_Deposit_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set when creating a deposit in the New Deposit Workflow. This field is a lookup to the relationship associated with the deposit.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Additional_Terms__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies additional terms to be added to the safe deposit box lease.</description>
        <inlineHelpText>Additional terms to be added to the safe deposit box lease.</inlineHelpText>
        <label>Additional Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Alternate_Signature_Description__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a description of the alternate text to print under a signature line for the responsible party on a CESA. This is used if something other than the responsible party&apos;s name should be printed under their signature line.</description>
        <inlineHelpText>A description of the alternate text to print under a signature line for the responsible party on a CESA. This would be used if something other than the responsible party&apos;s name should print under their signature line.</inlineHelpText>
        <label>Alternate Signature Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This currency field is used to specify the amount of the deposit.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Rent_Amount__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the amount of the initial annual rent for the safe deposit box.</description>
        <inlineHelpText>The amount of the initial annual rent for the safe deposit box.</inlineHelpText>
        <label>Annual Rent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and can be collected as part of a workflow. This field is used to specify (via lookup) the application record associated to the deposit and relationship the deposit is linked to.</description>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Appointee_Capacity_Description__c</fullName>
        <description>Fiduciary or Estate Appointed Party Capacity</description>
        <inlineHelpText>Capacity of a designated appointee, often by court order/will. Acts for a fiduciary or estate account ward. Capacity identified by court order/legal document as guardian, conservator, or legal representative. Captured once and applied to appointee(s).</inlineHelpText>
        <label>Appointee Capacity Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Frequency_Other__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It describes the frequency with which the safe deposit box rent amount is debited from the account.</description>
        <inlineHelpText>Describes the frequency with which the safe deposit box rent amount will be debited from the account.</inlineHelpText>
        <label>Billing Frequency Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Frequency__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies how often billing for the safe deposit box will occur.</description>
        <inlineHelpText>Specifies how often billing for the safe deposit box will occur.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Biannually</fullName>
                </value>
                <value>
                    <fullName>Monthly on the lease date anniversary</fullName>
                </value>
                <value>
                    <fullName>Yearly on the lease date anniversary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It describes how the billing for the safe deposit box is communicated to the lessee.</description>
        <inlineHelpText>Describes how the billing for the safe deposit box will be communicated to the lessee.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Give Notice</fullName>
                </value>
                <value>
                    <fullName>Debit Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__CD_Term__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It represents the length of time from the opening date of the time deposit to the maturity date (for example, 91 days and 18 months).</description>
        <inlineHelpText>The length of time from the opening date of the time deposit to the maturity date (e.g. 91 days 18 months).</inlineHelpText>
        <label>CD Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CESA_Responsible_Individual_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the designated beneficiary of a CESA becomes the responsible individual at age of maturity.</description>
        <inlineHelpText>If true the Designated Beneficiary of a CESA will become the Responsible Individual at age of majority.</inlineHelpText>
        <label>CESA Responsible Individual Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Certificate_Number__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It represents the number of the certificate of deposit (CD). This is used when a CD has an account number and a certificate number.</description>
        <inlineHelpText>The number of the Certificate of Deposit. This is used when a certificate of deposit has an account number and a certificate number.</inlineHelpText>
        <label>Certificate Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Change_Designated_Beneficiary_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the responsible party on the CESA may change the designated beneficiary.</description>
        <inlineHelpText>If true the Responsible Party on the CESA may change the Designated Beneficiary.</inlineHelpText>
        <label>Change Designated Beneficiary Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Compounding_Frequency__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies an institution&apos;s general policy regarding how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings.</description>
        <inlineHelpText>Specifies an institution&apos;s general policy regarding how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings.</inlineHelpText>
        <label>Compounding Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Continuous</fullName>
                </value>
                <value>
                    <fullName>No compounding/Simple</fullName>
                </value>
                <value>
                    <fullName>Semimonthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set when creating a deposit in the New Deposit Workflow. This field is a lookup to the contact associated with the deposit.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Death_Before_Required_Beginning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true the deceased IRA owner&apos;s death occurred before his/her required beginning date (RBD).</description>
        <inlineHelpText>If true the deceased IRA owner&apos;s death occurred before his/her required beginning date (RBD).</inlineHelpText>
        <label>Death Before Required Beginning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <description>The system populates this text field to display Deposit pages on a Deposit record through a workflow.</description>
        <inlineHelpText>The system populates this text field through a workflow.</inlineHelpText>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Account_Type__c</fullName>
        <description>Populate this picklist field to indicate the deposit account type. If creating new accounts via a core integration, this field is automatically populated. Otherwise, the field is manually populated during the deposit account opening workflow.</description>
        <label>Deposit Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Money Market Savings</fullName>
                </value>
                <value>
                    <fullName>Money Market Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Rate_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional lookup field references the deposit rate structure for this deposit.</description>
        <label>Deposit Rate Structure</label>
        <referenceTo>LLC_BI__Deposit_Rate_Structure__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description_of_Keys__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a description of any safe deposit box keys that have been issued.</description>
        <inlineHelpText>A description of any safe deposit box keys that have been issued.</inlineHelpText>
        <label>Description of Keys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Payment_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the manner in which the distribution should be made. (The &apos;periodic RMD as calculated&apos; option should only be selected for plans and circumstances where the required minimum distribution calculation applies, subject to financial institution policy.)</description>
        <inlineHelpText>Specifies the manner in which the distribution should be made.</inlineHelpText>
        <label>Distribution Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Periodic RMD as calculated (Traditional or SIMPLE only)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Distribution_Start_Date__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the starting date for the periodic distributions.</description>
        <inlineHelpText>The starting date for the periodic distributions.</inlineHelpText>
        <label>Distribution Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Durable_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. A durable agency grants a continuing power of attorney after legal incapacitation of an individual which terminiates only upon the individual&apos;s death.</description>
        <inlineHelpText>The authority granted to the deputy/agent on the safe deposit box lease is a durable power continuing after legal incapacity and terminating only at death of the appointing renter.</inlineHelpText>
        <label>Durable Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__E_Disclosures_And_Statement_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field to indicate they give consent to receive electronic disclosures regarding periodic account statements. By default, it is false.</description>
        <inlineHelpText>Select this checkbox to give consent to receive electronic disclosures regarding periodic account statements.</inlineHelpText>
        <label>E Disclosures And Statement Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Electronic_Notice_Delivery_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field to indicate the Electronic Procedure Disclosure should include disclosures for the electronic delivery of documents and notices. This content also automatically populates in the disclosure if the same content was previously included in the associated Terms and Conditions policy. By default, the field is false.</description>
        <inlineHelpText>Select this checkbox if the Electronic Procedure Disclosure should include disclosures for electronic documents and notices. This content also automatically populates in the disclosure if previously included in the associated Terms and Conditions policy.</inlineHelpText>
        <label>Electronic Notice Delivery Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Enable_Portal_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional boolean field to indicate that the deposit translation needs portal-enabled documents.</description>
        <inlineHelpText>The system automatically populates this checkbox when the deposit translation needs portal-enabled documents.</inlineHelpText>
        <label>Enable Portal Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude_Transaction_Account_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field if the account type or account holder is excluded from coverage under the Minnesota Transaction Account Application Disclosure requirement. This is only applicable to users in Minnesota. By default, it is false.</description>
        <inlineHelpText>Select this field if the account type or account holder is excluded from coverage under the Minnesota Transaction Account Application Disclosure requirement. This is only applicable to users in Minnesota.</inlineHelpText>
        <label>Exclude Transaction Account Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financial_Institution_Authorized_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Financial Institution Authorized Signer</description>
        <inlineHelpText>Select the authorized signer for your financial institution.</inlineHelpText>
        <label>Financial Institution Authorized Signer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Five_Year_Period_Ends_Year__c</fullName>
        <description>TThis field is optional and can be collected as part of a workflow. It is the year in which the five year period ends.</description>
        <inlineHelpText>The year in which the five year period will end.</inlineHelpText>
        <label>Five Year Period Ends Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency_of_Distributions__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the frequency of the periodic distributions.</description>
        <inlineHelpText>Specifies the frequency of the periodic distributions.</inlineHelpText>
        <label>Frequency of Distributions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Amount__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the funding amount for a deposit product.</description>
        <label>Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and can be collected as part of a workflow. It is the funding method for a deposit.</description>
        <label>Funding Method</label>
        <referenceTo>LLC_BI__Funding_Method__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Is_Self_Directed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the IRA is self-directed.</description>
        <inlineHelpText>If true the IRA is self-directed.</inlineHelpText>
        <label>IRA is Self-Directed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Plan_Type__c</fullName>
        <description>Users populate this optional picklist field with the type of tax-favored account (TFA) they want to open. By default, it is blank.</description>
        <inlineHelpText>Specifies the type of IRA plan being opened. This information should always be passed.</inlineHelpText>
        <label>TFA Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional IRA</fullName>
                </value>
                <value>
                    <fullName>Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Health Savings Account</fullName>
                </value>
                <value>
                    <fullName>Coverdell Education Savings Account</fullName>
                </value>
                <value>
                    <fullName>SIMPLE IRA</fullName>
                </value>
                <value>
                    <fullName>Traditional Beneficiary IRA</fullName>
                </value>
                <value>
                    <fullName>Roth Beneficiary IRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Recharacterization_Initial_Cont_Amt__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the initial contribution amount of the assets being recharacterized.</description>
        <inlineHelpText>The initial contribution amount of the assets being recharacterized.</inlineHelpText>
        <label>IRA Recharacterization Initial Cont Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Recharacterization_Initial_Cont_Date__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the initial contribution date of the assets being recharacterized.</description>
        <inlineHelpText>The initial contribution date of the assets being recharacterized.</inlineHelpText>
        <label>IRA Recharacterization Initial Cont Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Recharacterization_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the type of recharacterization.</description>
        <inlineHelpText>Specifies the type of recharacterization.</inlineHelpText>
        <label>IRA Recharacterization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional to Roth</fullName>
                </value>
                <value>
                    <fullName>Roth to Traditional</fullName>
                </value>
                <value>
                    <fullName>Roth conversion back to Traditional or SIMPLE</fullName>
                </value>
                <value>
                    <fullName>Erroneous rollover or transfer from Traditional to SIMPLE and back to Traditional</fullName>
                </value>
                <value>
                    <fullName>Roth rollover or direct rollover from an ERP to Traditional</fullName>
                </value>
                <value>
                    <fullName>Roth beneficiary direct rollover from an ERP to traditional beneficiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Index_Name__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This item indicates the name of the index tied to the variable rate account.</description>
        <inlineHelpText>This item indicates the name of the index tied to the variable rate account.</inlineHelpText>
        <label>Index Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Inherited_IRA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inherited IRA</description>
        <inlineHelpText>This indicates whether the plan is an inherited IRA. An IRA is inherited when the original owner of the IRA dies and ownership of the IRA passes to the named beneficiary of the original IRA.</inlineHelpText>
        <label>Inherited IRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Deposit__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This currency field is used to specify the amount of the initial deposit.</description>
        <label>Initial Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Interest_Rate_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies what kind of rate is used to determine the initial rate of interest on the account.</description>
        <inlineHelpText>Specifies what kind of rate is used to determine the initial rate of interest on the account.</inlineHelpText>
        <label>Initial Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the initial interest rate on the account.</description>
        <inlineHelpText>The initial interest rate on the account.</inlineHelpText>
        <label>Initial Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, an initial rate (for example, a teaser rate) was applied to the account.</description>
        <inlineHelpText>If true an initial rate (i.e. a teaser rate) was applied to the account.</inlineHelpText>
        <label>Initial Rate Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Margin__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the percentage that is added to the index rate to determine the initial (teaser) rate.</description>
        <inlineHelpText>The percentage that is added to the index rate to determine the initial (teaser) rate.</inlineHelpText>
        <label>Initial Rate Margin</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Period_Number__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the number of periods that the initial rate is in effect.</description>
        <inlineHelpText>The number of periods that the initial rate will be in effect.</inlineHelpText>
        <label>Initial Rate Period Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Period_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the period of time the initial rate applies.</description>
        <inlineHelpText>Specifies the period of time the initial rate will apply.</inlineHelpText>
        <label>Initial Rate Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Payment_Method_Type__c</fullName>
        <description>This picklist field is populated during the deposit account opening process. The picklist values are the methods of payment (to the account owner) of the earned interest or dividends on an interest bearing or dividend earning certificate account. The frequency of payment is separately indicated. When applicable, the account number to be credited and the ABA number of the receiving financial institution is required.</description>
        <label>Interest Payment Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add to Principal</fullName>
                </value>
                <value>
                    <fullName>Receive Periodic Check</fullName>
                </value>
                <value>
                    <fullName>Credit Account</fullName>
                </value>
                <value>
                    <fullName>Credit Account at other financial institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, a margin is used in determining the interest rate for a variable rate account.</description>
        <inlineHelpText>If true a margin is used in determining the interest rate for a variable rate account.</inlineHelpText>
        <label>Interest Rate Margin Indicator</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>